--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-payjp-checkout",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A React component for payjp checkout",
   "main": "./lib/payjp_checkout.js",
   "repository": "https://github.com/LancersDevTeam/react-payjp-checkout/",
@@ -32,7 +32,9 @@
     "payjp",
     "react-component"
   ],
-  "engines" : { "node" : ">=7.0.0 <8.1.3" },
+  "engines": {
+    "node": ">=7.0.0 <9.0.0"
+  },
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.7.5",
