--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "payjp",
     "react-component"
   ],
-  "engines" : { "node" : ">=7.0.0 <8.1.3" },
+  "engines" : { "node" : ">=7.0.0" },
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.7.5",
